src/components/BetDetailsModal/components/BetDetailsPage/BetDetailsPage.module.scss
@import '../../../../styles/shared';

.details {
  @include media-breakpoint-up(md) {
    width: 80%;
    margin: 0 auto;
  }
}

.username {
  margin: 1rem 0 2rem;

  @include media-breakpoint-up(md) {
    width: 100%;
    justify-content: center;
    margin: 0 0 1rem;
  }

  &--mobile {
    @include media-breakpoint-up(md) {
      display: none !important;
    }
  }

  &--desktop {
    display: none !important;

    @include media-breakpoint-up(md) {
      display: flex !important;
    }
  }
}

